Add dependency on tcod-sys
This removes the `ffi` module in favour of the new `tcod-sys`
dependency. Things seem to compile fine but cargo-run doesn't seem to
set up the environment correctly.

`cargo run --example colors` used to work with the old script but now it
prints out this error:

    target/examples/colors: error while loading shared libraries: libtcod.so: cannot open shared object file: No such file or directory

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["tomas@sedovic.cz", "arcnorj@gmail.com"]
 [lib]
 name = "tcod"
 path = "src/lib.rs"
+
+[dependencies.tcod-sys]
+path = "tcod-sys"
