--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 before_install:
   - sudo apt-get update -qq
 install:
-  - sudo apt-get install -y gcc g++ make upx electric-fence libsdl1.2debian
+  - sudo apt-get install -y upx electric-fence libsdl1.2-dev
 script:
   - cargo build --verbose
   - cargo test --verbose
